# MCP

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BoviSync_API_Best_Practices.xlsx  BoviSync_API_Endpoint_Reference.csv  DAIRY_FARM_MCP_SUMMARY.md  Dockerfile  ENHANCED_AGENT.md  README.md  demo_agent_usage.py  demo_enhanced_agent.py  demo_interactive_features.py  interactive_agent.py  model_context.yaml  pyproject.toml  requirements.txt  test_agent_integration.py  test_gpt4o_mini.py  test_unified_database.py  web_interface.py
.github/workflows/: ci.yml  security.yml
agent/: __init__.py  __main__.py  mcp_agent.py  refactored_agent.py
agent/capabilities/: __init__.py  discovery.py
agent/clients/: openai_client.py
agent/core/: config.py
agent/parsers/: __init__.py  yaml_parser.py
app/: crud.py  database.py  main.py  models.py  schemas.py  seed.py
app/api/: dependencies.py
app/api/v1/: api.py
app/api/v1/endpoints/: agent.py  auth.py  health.py  herd.py  mcp.py
app/core/: config.py  database.py  imports.py  jwt_provider.py  logging_config.py  security.py
app/exceptions/: __init__.py  exceptions.py
app/models/: __init__.py  herd.py  user.py
app/repositories/: __init__.py  base.py  herd.py
app/services/: __init__.py  herd.py  user.py
app/utils/: decorators.py  model_converters.py
bovisync_mcp/: README.md  __init__.py  client.py  config.py  server.py  start_server.sh
dairy_farm_mcp/: .env.example  README.md  __init__.py  client.py  config.py  demo.py  integration_example.py  requirements.txt  server.py  start_server.sh
httpx/: __init__.py  _types.py
httpx_stub/: __init__.py
httpx_stub/httpx_stub_backup/: __init__.py  _client.py
requests/: __init__.py
requests_backup/: __init__.py
specs/Mapping/: MCP_ICAR_AgGateway_Mapping.csv
terraform/: main.tf  outputs.tf
tests/: conftest.py  test_agent.py  test_api_agent.py  test_api_auth.py  test_api_health.py  test_core_security.py  test_integration.py  test_list_herd.py  test_models.py  test_parse_context.py  test_services.py
